--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
