--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -27,6 +27,9 @@ knife4j:
 
 sdwebui:
     url: http://localhost:7860
+    image:
+      save-way: local
+      save-path: D://
 
 sa-token:
     # token 名称（同时也是 cookie 名称）
