fix: 修改编译参数

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     </modules>
     <properties>
         <java.version>17</java.version>
+        <skipTests>true</skipTests>
     </properties>
 
 
