fix: 修改编译参数

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,27 +38,9 @@ jobs:
         with:
           name: wa-backend
           path: |
-            ./target/wa-backend-0.0.1-SNAPSHOT.jar
+            ./backend/target/backend-0.0.1-SNAPSHOT.jar
             ./run.sh
-            ./Dockerfile
-          retention-days: 3
-
-  package:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: download artifact
-        uses: actions/download-artifact@v3.0.2
-        with:
-          name: wa_backend
-      - name: login the Registry
-        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}} registry.cn-heyuan.aliyuncs.com
-      - name: build docker image
-        run: docker build -t wa_backend:${{ env.TAG }} .
-      - name: docker tag
-        run: docker tag wa_backend:${{ env.TAG }} registry.cn-heyuan.aliyuncs.com/1328411791/wa_backend:${{ env.TAG }}
-      - name: docker push
-        run: docker push registry.cn-heyuan.aliyuncs.com/1328411791/wa_backend:${{ env.TAG }}
+          retention-days: 1
 
   upload:
     runs-on: ubuntu-latest
