--- a/sdwebui-sdk/pom.xml
+++ b/sdwebui-sdk/pom.xml
@@ -15,6 +15,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <docker.repository.registry>registry.cn-beijing.aliyuncs.com</docker.repository.registry>
+        <docker.repository.namespace>1328411791</docker.repository.namespace>
     </properties>
 
     <dependencies>
@@ -60,6 +62,7 @@
                     <classifier>exec</classifier>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
