--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,8 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml -Dmaven.test.skip=true
-
       - name: Build the Docker image
-        run: mvn deploy
+        run: mvn deploy -Dmaven.test.skip=true
 
       - name: docker test
         run: docker image ls
