--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -7,6 +7,24 @@ spring:
         url: jdbc:mysql://47.113.179.249:3306/wa
         username: wa
         password: MxJNtPDGF43bzMiR
+    data:
+        redis:
+            database: 2
+            host: 47.113.179.249
+            port: 6378
+            password: dJ2GZRHtSm2fJKn8
+            # 连接超时时间
+            timeout: 10s
+            lettuce:
+                pool:
+                    # 连接池最大连接数
+                    max-active: 200
+                    # 连接池最大阻塞等待时间（使用负值表示没有限制）
+                    max-wait: -1ms
+                    # 连接池中的最大空闲连接
+                    max-idle: 10
+                    # 连接池中的最小空闲连接
+                    min-idle: 0
 
 springdoc:
     swagger-ui:
