--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -51,7 +51,7 @@ sdwebui:
         qiniu:
             access-key: DJYVDA6lFv2Zej4KxT1FZSlZGt16nITevFKUggEO
             secret-key: KGlTdVFh1QJnnEKtrXDAsYgoUTSXWi0BgQokrU4f
-            domain: http://obj.glcn.top
+            domain: https://obj.glcn.top
             bucket: wa-oversea
 
 
