--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -116,6 +116,10 @@
             <artifactId>sdwebui-sdk</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
