feat:增加获取我的列表所有SDImage

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
     port: 5050
 spring:
+    main:
+        allow-circular-references: true
     # 数据库配置
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
