feat:添加用户默认头像（注册时生效）

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -94,3 +94,6 @@ mybatis-plus:
             logic-delete-field: is_delete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
             logic-delete-value: 1 # 逻辑已删除值(默认为 1)
             logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
+user-config:
+    default-avatar-id: abe202bb-32fa-4342-848d-216f385e11d0
