--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -124,6 +124,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.19.0</version>
+        </dependency>
     </dependencies>
 
     <build>
