--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,6 @@ FROM  openjdk:17-jdk-alpine
 
 COPY ./target/backend-0.0.1-SNAPSHOT.jar /usr/app/
 
-EXPOSE 11140
+EXPOSE 5050
 
-ENTRYPOINT ["java","-jar","/usr/app/backend-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/usr/app/backend-0.0.1-SNAPSHOT.jar","--spring.profiles.active=develop"]
